# grug-for-python

./: .gitignore  README.md  add_accept_methods.sh  benchmarks.py  fuzz.py  pyproject.toml  pyrightconfig.json  tests.py
.github/workflows/: build.yml
example/: example.py
example/mods/animals/: labrador-Dog.grug
examples/custom_package_prefixes/: example.py  mod_api.json
examples/custom_package_prefixes/mods/animals/: labrador-Dog.grug
examples/dict/: example.py  mod_api.json
examples/dict/mods/animals/: labrador-Dog.grug
examples/dir_entry_not_found/: example.py
examples/dirs_cant_create_entity/: example.py
examples/entity/: example.py  mod_api.json
examples/entity/mods/animals/: labrador-Dog.grug
examples/export_fn_not_defined/: example.py  mod_api.json
examples/fib_memoized/: mod_api.json
examples/fib_naive/: mod_api.json
examples/files_are_not_indexable/: example.py
examples/global_list/: example.py  mod_api.json
examples/host_fn_error/: example.py  mod_api.json
examples/host_fn_error_registered_twice/: mod_api.json
examples/list/: example.py  mod_api.json
examples/list_data_structure/: mod_api.json
examples/minimal/: example.py  mod_api.json
examples/mod_subdirectory/: example.py
examples/resource/: example.py  mod_api.json
examples/using_grug_packages/: example.py  mod_api.json
grug/: __init__.py  backend.py  bindings.py  frontend.py  loader.py  serializer.py
src/grug/: __init__.py  entity.py  error.py  errors.py  frontend.py  game_fn.py  grug_dir.py  grug_file.py  grug_package.py  grug_state.py  grug_value.py  loader.py  parser.py  serializer.py  tokenizer.py  type_propagator.py  visitor.py
tests/: conftest.py  test_coverage.py  test_grug.py  test_loader.py
(+10 files in other folders)
