[project]
name = "grug-lang"
version = "1.3.0"
authors = [{ name = "MyNameIsTrez", email = "welfje@gmail.com" }]
description = "Make your mods immortal."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/grug-lang/grug-for-python"

[build-system]
requires = ["setuptools>=65,<68"]
build-backend = "setuptools.build_meta"
